retrieveUnpackaged/objects/Forms__c.object
<CustomObject>
    <fields>
        <fullName>Direct_Cost_Total__c</fullName>
        <description>SF-182</description>
        <formula>Books_Materials__c +  Tuition_and_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Doc_Purchase_Order_Requisition__c</fullName>
        <description>SF-182</description>
        <label>Doc / Purchase Order / Requisition #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documentation_Requirements__c</fullName>
        <defaultValue>&quot;Are the QA documentation requirements specified on this form incorporated into the extramural documentation (RFA, RFP, SOW, PWS, etc.)?&quot;</defaultValue>
        <description>ORD-111</description>
        <label>Documentation Requirements</label>
        <length>137</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EHRI_Employee_Number2__c</fullName>
        <description>SF-182</description>
        <formula>IF(ISBLANK( 
IF( ISBLANK( Prepare_Form_for__c ), 
 Type_1_Owner_Contact__r.Employee_Number__c , 
 Prepare_Form_for__r.Employee_Number__c 
)), 
&quot;[This field will populate after save.]&quot;, 
IF( ISBLANK( Prepare_Form_for__c ), 
 Type_1_Owner_Contact__r.Employee_Number__c , 
 Prepare_Form_for__r.Employee_Number__c 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EHRI Employee Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <defaultValue>$User.EmployeeNumber</defaultValue>
        <label>EIN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Hours_Donated__c</fullName>
        <description>EPA-3160-6v5</description>
        <label>Hours Donated</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Use_or_Lose__c</fullName>
        <defaultValue>&quot;I hereby wish to contribute hours of annual leave that would otherwise be forfeited at the end of the current leave year to the EPA Leave Bank (enter # of hours below).  By signing the below, I certify that I want EPA to deposit, at the conclusion of the current leave year, all the leave that would otherwise forfeit, directly into the Agency Leave Bank.  This leave may not be restored, to facilitate and encourage extra donations, the normal limitation for contributing use or lose hours is waived during the open season.  This waiver is in accordance with the Leave Bank regulations under 5 CFR, Section 630.1005.&quot;</defaultValue>
        <description>EPA3160-6v5</description>
        <label>Description</label>
        <length>620</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EPA3160-6v5</description>
        <label>E. Use or Lose</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>EPA-3160-6v5</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <defaultValue>$User.Email</defaultValue>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Digital_Signature__c</fullName>
        <inlineHelpText>Clicking the &quot;Employee&apos;s Signature&quot; checkbox will sign this section upon saving the form.</inlineHelpText>
        <label>Employee Digital Signature</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ID_No__c</fullName>
        <description>EPA-3160-6v5</description>
        <formula>Type_1_Owner_Contact__r.Employee_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee ID No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Location__c</fullName>
        <description>EPA-3160-6v5</description>
        <label>Employee Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Region 1</fullName>
                </value>
                <value>
                    <fullName>Region 2</fullName>
                </value>
                <value>
                    <fullName>Region 3</fullName>
                </value>
                <value>
                    <fullName>Region 4</fullName>
                </value>
                <value>
                    <fullName>Region 5</fullName>
                </value>
                <value>
                    <fullName>Region 6</fullName>
                </value>
                <value>
                    <fullName>Region 7</fullName>
                </value>
                <value>
                    <fullName>Region 8</fullName>
                </value>
                <value>
                    <fullName>Region 9</fullName>
                </value>
                <value>
                    <fullName>Region 10</fullName>
                </value>
                <value>
                    <fullName>Ann Arbor</fullName>
                </value>
                <value>
                    <fullName>Cincinnati</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>RTP</fullName>
                </value>
                <value>
                    <fullName>National Program Manager/Headquarters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Name_SF_182__c</fullName>
        <description>SF-182</description>
        <formula>IF(ISBLANK(Applicant_Name_Last_First_MI2__c),
&quot;[Will be populated by Applicant Name field.]&quot;,
Applicant_Name_Last_First_MI2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Name:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_s_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Clicking this box digitally dates and signs this form.</inlineHelpText>
        <label>Employee&apos;s Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ending_Date_of_Development_Activity__c</fullName>
        <description>SF-182</description>
        <formula>IF(ISBLANK(Training_End_Date__c), 
&quot;[Will be populated by Training End Date field.]&quot;, 
TEXT(Training_End_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ending Date of Development Activity:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalate_to_Chief_Learning_Officer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SF-182 was &quot;Requires_Escalated_Approval&quot;</description>
        <label>Escalate to Chief Learning Officer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Award__c</fullName>
        <description>ORD-111</description>
        <label>Estimated Award $</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_End_Date__c</fullName>
        <description>ORD-111</description>
        <label>Estimated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Start_Date__c</fullName>
        <description>ORD-111</description>
        <label>Estimated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evaluation_Factor__c</fullName>
        <defaultValue>&quot;For new actions, has the QA documentation required in Section IV of this form been included in the RFA, RFP, SOW or PWS as an evaluation factor?&quot;</defaultValue>
        <description>ORD-111</description>
        <label>Evaluation Factor</label>
        <length>144</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exists__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ORD-111</description>
        <label>Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Submission_Date__c</fullName>
        <description>ORD-111</description>
        <label>Expected Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expire_Date__c</fullName>
        <label>Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>F_Description__c</fullName>
        <defaultValue>&quot;I hereby withdraw from EPA’s Leave Bank. I understand that I may not re-enroll until the next open enrollment period or by another qualifying event.&quot;</defaultValue>
        <description>EPA3160-6v5</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>F__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EPA-3160-6v5</description>
        <label>F. Withdraw</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finalize_Approval_Reassignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All Forms, used to trigger record sharing after approval re-assignment</description>
        <label>Finalize Approval Reassignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name_3160__c</fullName>
        <description>EPA-3160-6v5</description>
        <formula>Type_1_Owner_Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Owner__c</fullName>
        <formula>IF( Unauthenticated_Owner__c != NULL, Unauthenticated_Owner__r.FirstName + &quot; &quot; + Unauthenticated_Owner__r.LastName, Owner:User.FirstName + &quot; &quot; + Owner:User.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Record_Name__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Record Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Status__c</fullName>
        <label>Form Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Type__c</fullName>
        <label>Form Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Developer Sandbox</fullName>
                </value>
                <value>
                    <fullName>Custom Object</fullName>
                </value>
                <value>
                    <fullName>Code Storage MB</fullName>
                </value>
                <value>
                    <fullName>Data Storage MB</fullName>
                </value>
                <value>
                    <fullName>Files Storage MB</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Starter User</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Developer Pro Sandbox</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>File Storage MB</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Full Sandbox</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Full User Count</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Starter User Count</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Furnish_Invoice_to__c</fullName>
        <description>SF-182</description>
        <label>Furnish Invoice to</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USEPA RTP Finance Center</fullName>
                </value>
                <value>
                    <fullName>USEPA Cincinnati Finance Center</fullName>
                </value>
                <value>
                    <fullName>Purchase Card Transaction</fullName>
                </value>
                <value>
                    <fullName>No Cost Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <description>SF-182</description>
        <formula>IF( ISBLANK( IF( ISBLANK( Prepare_Form_for__c ) ,
    Type_1_Owner_Contact__r.Grade__c ,
  Prepare_Form_for__r.Grade__c )),
&quot;[This field will populate after save.]&quot;,
IF( ISBLANK( Prepare_Form_for__c ) ,
    Type_1_Owner_Contact__r.Grade__c ,
  Prepare_Form_for__r.Grade__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Org_Code__c</fullName>
        <formula>HR_Organization__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HR Org Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Organization__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>HR Organization</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The HR Org doesn&apos;t exist.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>HR Org</value>
            </filterItems>
            <filterItems>
                <field>Account.Deleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ID_Number__c</fullName>
        <description>ORD-111</description>
        <label>ID Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_Agree_with_Terms_Approver_1__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check this box to indicate you agree with the terms listed above.</inlineHelpText>
        <label>I Agree with Terms (Approver 1)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_Agree_with_Terms_Approver_2__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check this box to indicate you agree with the terms listed above.</inlineHelpText>
        <label>I Agree with Terms (Approver 2)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_yes_please_describe__c</fullName>
        <description>SF-182</description>
        <label>If yes, please describe:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Immediate_Supervisor_s_Digital_Signature__c</fullName>
        <label>Immediate Supervisor&apos;s Digital Signature</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Immediate_Supervisor_s_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Immediate Supervisor&apos;s Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indirect_Appropriation_Fund__c</fullName>
        <description>SF-182</description>
        <label>Indirect Appropriation / Fund</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_Total__c</fullName>
        <description>SF-182</description>
        <formula>Per_diem__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indirect Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Instructions_ORD111__c</fullName>
        <defaultValue>&apos;Please enter the title of this extramural action. If you are preparing the form for someone else, please type their name in the &quot;Prepare Form As Person Other Than Self&quot; field. As you type, the names available will appear. Select the correct one. Once you submit the form, the Originator field will update to correctly reflect that individual. Originators typically are Project Officers (POs), Principal Investigators (PIs), and Contracting Officer Representative (CORs).&apos;+BR()+BR()+&apos;If you are the originator do not enter anything into the &quot;Prepare Form As Person Other Than Self&quot; field.&apos;</defaultValue>
        <description>ORD-111</description>
        <label>Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <defaultValue>&quot;As a reminder with a revision, the moratorium is still in effect on the issuance of new purchase card and convenience check accounts.&quot;+BR()+ BR()+

&quot;For those instances where establishing a new account is mission critical, the cognizant senior resource official and/or Division Director must submit a written justification, explaining that mission criticality, to the EPA National Purchase Card Program Manager (NPCPM) Mr. Brian Long.&quot; +BR()+ BR()+

&quot;Authorizations may be granted on an exception basis.&quot;+BR()+ BR()+

&quot;Reminder: Refer to  http://purchasecard.epa.gov, Important Reminders About Existing Agency Purchase Card Policy that are in effect and remain unchanged.&quot; +BR()+ BR()+

&quot;The EPA Acquisition Guide (EPAAG) section 13.3.1 was posted in December 2015 which includes the latest policy for the purchase card program and is located at https://oamintra.epa.gov/EPAAG.&quot; +BR()+BR()+

&quot;The EPA purchase card program provides an efficient and convenient way of buying commercial/off the shelf goods and services in order to meet the Agency mission. However, it is essential that cardholders and approving officials ensure that all purchases made with the purchase card comply with the rules and regulations, and that proper documentation is completed to justify all purchase card transactions.&quot; +BR()+BR()+

&quot;Please note that purchase card and/or convenience check misuse will result in either suspension or rescission of an Approving Official and/or Purchase Cardholder delegation of authority.&quot;+ BR()+BR()+

&quot;All cardholders and approving officials are responsible for ensuring appropriate use of purchase cards. Please communicate this information to your subordinates and stress that you will personally hold purchase cardholders accountable for proper use of the purchase card. Approving Officials will also be held accountable for proper review and authorization of their purchase cardholder transactions and records.&quot;+BR()+BR()+

&quot;The Office of Acquisition Management provides this Purchase Card Web Site for cardholders. Before disputing any purchase card transaction please review the appropriate guidelines.&quot;+BR()+BR()+

&quot;SP2 JPMC Bank (Fleet): Dispute Guidelines Customer Service:(888)297-0781&quot; + BR()+
&quot;SP2 JPMC Bank (Purchase): Dispute Guidelines Customer Service:(888)297-0781&quot; +BR()+
&quot;Purchase Card Program issues: Dianne Lyles (202)564-6111&quot;+BR()+ 
&quot;Fleet Card Program issues: Bryford Metoyer (202)564-0310&quot; +BR()+
&quot;Allocation and Finance issues: Cynthia Spadaro (513)487-2069&quot;</defaultValue>
        <label>Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Justification_for_8_or_more_cardholders__c</fullName>
        <label>Justification for 8 or more cardholders</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Justification_for_Limit_Change__c</fullName>
        <label>Justification for Limit Change</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Approval_Reassignment__c</fullName>
        <description>All Forms, used to store information about record approval re-assignment</description>
        <label>Last Approval Reassignment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_3160__c</fullName>
        <description>EPA-3160-6v5</description>
        <formula>Type_1_Owner_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_QA_Organization__c</fullName>
        <description>ORD-111</description>
        <label>Lead QA Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeaveBankInstructions__c</fullName>
        <defaultValue>&quot;https://epa.secure.force.com/Leave_Bank_Instructions&quot;</defaultValue>
        <description>EPA-3160-6v5</description>
        <label>Click here to view instructions:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADA OK</fullName>
                </value>
                <value>
                    <fullName>ANN ARBOR MI</fullName>
                </value>
                <value>
                    <fullName>ATHENS GA</fullName>
                </value>
                <value>
                    <fullName>BOISE ID</fullName>
                </value>
                <value>
                    <fullName>BOSTON - REGION 1</fullName>
                </value>
                <value>
                    <fullName>CHICAGO IL</fullName>
                </value>
                <value>
                    <fullName>CHICAGO REGION 5</fullName>
                </value>
                <value>
                    <fullName>CINCINNATI, OH</fullName>
                </value>
                <value>
                    <fullName>Cincinnati OH</fullName>
                </value>
                <value>
                    <fullName>Corvallis OR</fullName>
                </value>
                <value>
                    <fullName>DULUTH MN</fullName>
                </value>
                <value>
                    <fullName>Edison NJ</fullName>
                </value>
                <value>
                    <fullName>FAI On-Line</fullName>
                </value>
                <value>
                    <fullName>Fort Meade, MD</fullName>
                </value>
                <value>
                    <fullName>GULF BREEZE FL</fullName>
                </value>
                <value>
                    <fullName>HQ, CMM2, OPP</fullName>
                </value>
                <value>
                    <fullName>HQ CMM2 OPP</fullName>
                </value>
                <value>
                    <fullName>HQ - CRYSTAL GATEWAY</fullName>
                </value>
                <value>
                    <fullName>HQ - CRYSTAL STATION</fullName>
                </value>
                <value>
                    <fullName>HQ - OCFO ONLY</fullName>
                </value>
                <value>
                    <fullName>HQ - OFFICE OF WATER</fullName>
                </value>
                <value>
                    <fullName>HQ or Washington DC</fullName>
                </value>
                <value>
                    <fullName>HQ - OSTRI- CRYSTAL GATEWAY</fullName>
                </value>
                <value>
                    <fullName>HQ - WIC 3N</fullName>
                </value>
                <value>
                    <fullName>Las Vegas NV</fullName>
                </value>
                <value>
                    <fullName>Montgomery AL</fullName>
                </value>
                <value>
                    <fullName>NARRAGANSETT RI</fullName>
                </value>
                <value>
                    <fullName>New Orleans, LA</fullName>
                </value>
                <value>
                    <fullName>On-Line Training</fullName>
                </value>
                <value>
                    <fullName>OPPT/EAD NETI 2138</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_of_Training_Site__c</fullName>
        <defaultValue>&quot;Same as Mailing Address&quot;</defaultValue>
        <description>SF-182</description>
        <label>Location of Training Site</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mail_Code__c</fullName>
        <defaultValue>$User.Mail_Stop__c</defaultValue>
        <label>Mail Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <defaultValue>$User.Street</defaultValue>
        <label>Mailing Address</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monthly_Purchase_Limit__c</fullName>
        <defaultValue>7000</defaultValue>
        <label>Monthly Purchase Limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_and_Address_of_Vendor__c</fullName>
        <description>SF-182</description>
        <label>Name and Mailing Address of Vendor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_of_Course_or_Development_Activity__c</fullName>
        <description>SF-182</description>
        <formula>IF(ISBLANK(Course_Title__c), 
&quot;[Will be populated by Course Title field.]&quot;, 
Course_Title__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name of Course or Development Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Program__c</fullName>
        <description>ORD-111</description>
        <label>National Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_City__c</fullName>
        <label>New City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Divison__c</fullName>
        <label>New Divison</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Email_Address__c</fullName>
        <label>New Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>New_Mail_Code__c</fullName>
        <label>New Mail Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Mailing_Address__c</fullName>
        <label>New Mailing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Office__c</fullName>
        <label>New Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Region__c</fullName>
        <label>New Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_State__c</fullName>
        <label>New State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Telephone_Number__c</fullName>
        <label>New Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_Zip__c</fullName>
        <label>New Zip</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Government_Contribution_Cost__c</fullName>
        <description>SF-182</description>
        <label>Non-Government Contribution Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_contract_Actions__c</fullName>
        <description>ORD-111</description>
        <label>Non-contract Actions:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cooperative Agreement</fullName>
                </value>
                <value>
                    <fullName>CRADA/MTA</fullName>
                </value>
                <value>
                    <fullName>Interagency Agreement</fullName>
                </value>
                <value>
                    <fullName>Funds In</fullName>
                </value>
                <value>
                    <fullName>Funds Out</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
                <value>
                    <fullName>Intramural</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <defaultValue>&quot;This agreement must be signed by the nominee for Government training that exceeds 80 hours (or such other designated period, less than 80 hours as prescribed by the agency) for which the Government approves payment of training costs prior to the commencement of such training. Nothing contained in this agreement below shall be construed as limiting the authority of an agency to waive, in whole or in part, an obligation of an employee to pay expenses incurred by the Government in connection with the training.&quot;</defaultValue>
        <description>SF-182</description>
        <label>Note:</label>
        <length>515</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Office_Telephone2__c</fullName>
        <description>SF-182</description>
        <formula>IF(ISBLANK( 
IF( ISBLANK( Prepare_Form_for__c ), 
Type_1_Owner_Contact__r.Phone , 
Prepare_Form_for__r.Phone
)), 
&quot;[This field will populate after save.]&quot;, 
IF( ISBLANK( Prepare_Form_for__c ), 
Type_1_Owner_Contact__r.Phone , 
Prepare_Form_for__r.Phone
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Office Telephone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization Allocation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Forms (Organization Allocation)</relationshipLabel>
        <relationshipName>Form1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization_Mailing_Address__c</fullName>
        <description>SF-182</description>
        <label>Organization Mailing Address</label>
        <type>TextArea</type>
    </fields>
</CustomObject>